--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
-
+  
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -88,6 +88,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/services/movieProcessing.js"></script>
+        <script src="scripts/services/localStorage.js"></script>
+        <script src="scripts/directives/videoGallery.js"></script>
         <!-- endbuild -->
 </body>
 </html>
