Poprawki - brakuje ad1) prototype.

--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
   <script src="scripts/services/vimeoProcessing.js"></script>
   <script src="scripts/services/youTubeProcessing.js"></script>
   <script src="scripts/services/localStorage.js"></script>
+  <script src="scripts/services/moviesStorage.js"></script>
   <script src="scripts/services/paginationService.js"></script>
   <script src="scripts/directives/videoGallery.js"></script>
   <script src="scripts/directives/pagination.js"></script>
