--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,9 @@
   <script src="scripts/services/youTubeProcessing.js"></script>
   <script src="scripts/services/localStorage.js"></script>
   <script src="scripts/services/moviesStorage.js"></script>
+  <script src="scripts/services/commentService.js"></script>
   <script src="scripts/directives/videoGallery.js"></script>
+  <script src="scripts/directives/comments.js"></script>
   <script src="scripts/directives/pagination.js"></script>
   <script src="scripts/directives/videoFrame.js"></script>
   <script src="scripts/directives/videoFrameWindow.js"></script>
